--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,9 @@ pygmentsStyle = "pygments"
   # Footer text, can be markdown
   footer = "Talk is cheap. Show me the code."
 
+  # True to open gitalk
+  enableGitalk = true
+
   # If true, the CSS/JS for Katex math typesetting are enabled
   katex = true
 
@@ -74,3 +77,17 @@ pygmentsStyle = "pygments"
     name = "Github"
     url = "https://github.com/threegeese/Online-Judge"
     weight = 5
+
+# gitalk config
+[params.gitalk] 
+  clientID = "[Client ID]" # Your client ID
+  clientSecret = "[Client Secret]" # Your client secret
+  repo = "mogeko.github.io" # The repo to store comments
+  owner = "Mogeko" # Your GitHub ID
+  admin= "Mogeko" # Required. Github repository owner and collaborators. (Users who having write access to this repository)
+  id= "location.pathname" # The unique id of the page.
+  labels= "gitalk" # Github issue labels. If you used to use Gitment, you can change it
+  perPage= 15 # Pagination size, with maximum 100.
+  pagerDirection= "last" # Comment sorting direction, available values are 'last' and 'first'.
+  createIssueManually= false # If it is 'false', it is auto to make a Github issue when the administrators login.
+  distractionFreeMode= false # Enable hot key (cmd|ctrl + enter) submit comment.
