--- a/config.toml
+++ b/config.toml
@@ -79,15 +79,16 @@ pygmentsStyle = "pygments"
     weight = 5
 
 # gitalk config
+# https://github.com/gitalk/gitalk
 [params.gitalk] 
-  clientID = "[Client ID]" # Your client ID
-  clientSecret = "[Client Secret]" # Your client secret
-  repo = "mogeko.github.io" # The repo to store comments
-  owner = "Mogeko" # Your GitHub ID
-  admin= "Mogeko" # Required. Github repository owner and collaborators. (Users who having write access to this repository)
-  id= "location.pathname" # The unique id of the page.
-  labels= "gitalk" # Github issue labels. If you used to use Gitment, you can change it
-  perPage= 15 # Pagination size, with maximum 100.
-  pagerDirection= "last" # Comment sorting direction, available values are 'last' and 'first'.
-  createIssueManually= false # If it is 'false', it is auto to make a Github issue when the administrators login.
-  distractionFreeMode= false # Enable hot key (cmd|ctrl + enter) submit comment.
+  clientID = "17557de3c4980d462ce6"
+  clientSecret = "84f881bb36d738e3e0ccc1394d332d0aef2e0593"
+  repo = "dsaa"
+  owner = "threegeese"
+  admin= "threegeese"
+  id= "location.pathname"
+  labels= "gitalk"
+  perPage= 15
+  pagerDirection= "last"
+  createIssueManually= false
+  distractionFreeMode= false
