--- a/config.toml
+++ b/config.toml
@@ -90,5 +90,5 @@ pygmentsStyle = "pygments"
   labels= "gitalk"
   perPage= 15
   pagerDirection= "last"
-  createIssueManually= false
+  createIssueManually= true
   distractionFreeMode= false
