--- a/config.toml
+++ b/config.toml
@@ -85,7 +85,7 @@ pygmentsStyle = "pygments"
   clientSecret = "84f881bb36d738e3e0ccc1394d332d0aef2e0593"
   repo = "dsaa"
   owner = "threegeese"
-  admin= "threegeese"
+  admin= ['threegeese']
   id= "location.pathname"
   labels= "gitalk"
   perPage= 15
