--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://oj.pkachu.com/"
 languageCode = "zh-Hans"
 defaultContentLanguage = "zh-Hans"
-title = "Learn"
+title = ""
 theme = "cayman-hugo-theme"
 
 # Syntax highlighting
