--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://oj.pkachu.com/"
 languageCode = "zh-Hans"
 defaultContentLanguage = "zh-Hans"
-title = ""
+title = "Learn"
 theme = "cayman-hugo-theme"
 
 # Syntax highlighting
@@ -75,7 +75,7 @@ pygmentsStyle = "pygments"
     weight = 4
   [[menu.nav]]
     name = "Github"
-    url = "https://github.com/threegeese/Online-Judge"
+    url = "https://github.com/threegeese/dsaa"
     weight = 5
 
 # gitalk config
